--- a/index.ejs
+++ b/index.ejs
@@ -3,8 +3,10 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <div id="root"></div>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.css"></link>
+
   </head>
+  <div id="root"></div>
   <body>
   </body>
 </html>
