added package and changed css styles

--- a/src/app.scss
+++ b/src/app.scss
@@ -24,7 +24,7 @@ html {
   display: flex;
   align-items: center;
   width: 100%;
-  background: #eee;
+  background: #FFFFFF;
   padding: 20px;
 
 
@@ -37,11 +37,21 @@ html {
 }
 
 .footer {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-around;
+  // display: flex;
+  // align-items: baseline;
+  // justify-content: space-around;
+  position: fixed;
+  left: 0px;
+  bottom: 25px;
+  height:30px;
+  width:100%;
+
 }
 
+.ui_card {
+  width: 500px;
+  margin:0px auto;
+}
 
 // .nav li {
 //   color: white;
