css resturaunt card

--- a/src/app.scss
+++ b/src/app.scss
@@ -53,6 +53,16 @@ html {
   margin:0px auto;
 }
 
+#tallbox{
+  width: 400px;
+
+}
+
+#restimg{
+  height: 320px;
+  // -webkit-filter: blur(10px);
+  // -webkit-filter: blur(2px);
+}
 
 
 // .nav li {
