changes to search, nav, auth

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,7 +9,7 @@ html {
  box-sizing: border-box;
 }
 body h1 {
-  color: orange;
+  color: #000000;
 }
 
 .hi {
@@ -58,6 +58,15 @@ body h1 {
 #tallbox{
   width: 400px;
 
+}
+
+#themainhead{
+  color: #50E3C2;
+  
+}
+
+#ourstory{
+  font-family: "courier";
 }
 
 #restimg{
