--- a/index.ejs
+++ b/index.ejs
@@ -8,5 +8,7 @@
   </head>
   <body>
       <div id="root"></div>
+
+      <script type="text/javascript" src="http://feather.aviary.com/js/feather.js"></script>
   </body>
 </html>
