grid comment card component reconfigure

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -65,10 +65,10 @@ body h1 {
 }
 
 
-textarea{
-  height: 20px !important;
-  width: 455px !important;
-  }
+// textarea{
+//   height: 20px !important;
+//   width: 455px !important;
+//   }
 
   
 
