added post request for user id, photo url, email and uid

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -85,9 +85,9 @@ body h1 {
   // -webkit-filter: blur(2px);
 }
 
-.listStyle{
-  color: white;
-}
+// .listStyle{
+//   color: white;
+// }
 #rcorners2 {
   border-radius: 10px;
 }
