--- a/index.ejs
+++ b/index.ejs
@@ -9,6 +9,6 @@
   <body>
       <div id="root"></div>
 
-      <script type="text/javascript" src="http://feather.aviary.com/js/feather.js"></script>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/aviary-editor@3.1.0/aviary-editor.min.js"></script>
   </body>
 </html>
