fixed comment Card positioning

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -64,12 +64,11 @@ body h1 {
 
 }
 
-
-// textarea{
-//   height: 20px !important;
-//   width: 455px !important;
-//   }
-
+textarea{
+  border-radius: 8px;
+  height: 113px !important;
+  width: 600px !important;
+  }
 
 
 #ourstory{
@@ -104,8 +103,8 @@ body h1 {
 
 #image1 {
   position: relative;
-  width: 80px;
-  height: 80px;
+  width: 138px;
+  height: 138px;
   overflow: hidden;
 
 }
