--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -115,6 +115,11 @@ width: 10%;
 	width: 100%;
 }
 
+#murray{
+  width:400px;
+  height:400px; 
+  border-radius: 8px;
+}
 @media all and (min-width: 40em) {
   .menuliststyle{
     width: 50%;
